2009-11-20  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-send-mail-with-sendmail): Revert last change.

2009-11-19  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-from-style, message-interactive)
	(message-cite-prefix-regexp, message-sendmail-envelope-from)
	(message-yank-prefix, message-indentation-spaces, message-signature)
	(message-signature-file, message-default-headers): For GNU Emacs, set
	default values from the corresponding mail-* variables.
	(message-send-mail-with-sendmail): Use envelope-from only if
	mail-specify-envelope-from is non-nil.

2009-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-decode-region): Don't quote decoded words
	containing tspecial characters if they have been already quoted.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (help-xref-stack-item): Define for compiler.

2009-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-remove-overlays): eval-and-compile.

2009-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Remove useless goto-char.
	(gnus-summary-show-thread, gnus-summary-hide-thread): Indent.

2009-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-overlay-get): New alias to overlay-get.
	(gnus-overlays-in): New alias to overlays-in.

	* gnus-sum.el (gnus-remove-overlays): Use gnus-overlays-in,
	gnus-overlay-get, and gnus-delete-overlay.
	(gnus-summary-show-thread): Make it work as well for systems in which
	next-single-char-property-change is not available.
	(gnus-summary-hide-thread): Use gnus-make-overlay and gnus-overlay-put.

2009-10-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-remove-overlays): Add doc string and alias.

2009-10-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* gnus-sum.el (gnus-remove-overlays): Compatibility code for Emacs 21
	and XEmacs that don't have `remove-overlays'.

2009-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>
